# CNN_Fashion_MNIST_Adversarial

./: .gitignore  README.md  checpoint.py  cnn_main.py  eval.py  evasion_attack.py  fastapi_app.py  model1.pth  pyproject.toml  quick_fgsm_attack.py
.trae/documents/: 创建图像快速FGSM攻击脚本.md  在项目中增加迭代式攻击（I-FGSM_PGD）.md  基于quick_fgsm_attack实现FastAPI对抗攻击服务.md  新增“自动攻击”后端接口与前端按钮.md  构建前端页面对接FGSM攻击服务.md
docs/: ENVIRONMENT.md  REPRODUCTION_REPORT.md  RUN_LOGS.md
docs/presentation/: main.md
fashion-mnist-master/: models.py  requirements.txt  train_models.py
fashion-mnist-master/config/: CNNWithBatchNorm.yaml  DeepCNN.yaml  ResNet.yaml  SimpleCNN.yaml
saved/adversarial/: attack_results.csv
web/: app.js  index.html  style.css
