[project]
name = "cnn-pytorch-adversarial-fashion-mnist"
version = "0.1.0"
description = "CNN on Fashion-MNIST and FGSM adversarial attack"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.124.4",
    "httpx>=0.28.1",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.6.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.38.0",
]

[tool.uv]
dev-dependencies = []
